update: disclaimer content edit

--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -11,7 +11,7 @@ A text toolbar is a set of buttons and menus that allows users to edit text, sea
 
 <InlineNotification>
 
-**Note:** Some concepts included in this pattern, like searching key words, are not available for production use. This guidance reflects our current understanding of these topics. This pattern is currently open for Code contributions.
+**Note:** The key word search concept included in this pattern is not currently available for production use. The guidance included reflects our current understanding of this topic, and the pattern is currently open for code contributions.
 
 </InlineNotification>
 
