--- a/src/pages/patterns/search-pattern/index.mdx
+++ b/src/pages/patterns/search-pattern/index.mdx
@@ -11,6 +11,7 @@ import {
   StructuredListInput,
   StructuredListCell,
   OrderedList,
+  UnorderedList,
   ListItem,
 } from "carbon-components-react";
 
