--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -329,7 +329,7 @@ import {
 
 ### Sizing
 
-The data table is available in [4 different row sizes](/data-table/style#row-sizes): tall, normal, short, compact.
+The data table is available in four different [row sizes](/data-table/style#row-sizes): tall, normal, short, compact.
 
 <Row>
 <Column colLg={8}>
