--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -140,7 +140,7 @@ Start by identifying the purpose of the visualization and then choose the approp
     href="/data-visualization/basic-charts#pie"
     >
 
-![](images/pie.svg)
+![Pie](images/pie.svg)
 
 </OverviewCard>
 </Column>
