--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -70,7 +70,7 @@ Start by identifying the purpose of the visualization and then choose the approp
     href="/data-visualization/basic-charts#grouped-bar"
     >
 
-![](images/grouped-bar-horizontal.svg)
+![Grouped bar (horizontal)](images/grouped-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
