--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -151,7 +151,7 @@ Start by identifying the purpose of the visualization and then choose the approp
     href="/data-visualization/basic-charts/#stacked-bar"
     >
 
-![](images/stacked-bar-horizontal.svg)
+![Stacked bar (horizontal)](images/stacked-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
