--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -148,17 +148,17 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stacked bar (horizontal)"
-    href="/data-visualization/basic-charts/#stacked-bar"
+    href="/data-visualization/basic-charts/#stacked-horizontal-bar-(discrete)"
     >
 
-![Stacked bar (horizontal)](images/stacked-bar-horizontal.svg)
+![Stacked bar horizontal](images/stacked-bar-horizontal.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stacked bar (vertical)"
-    href="/data-visualization/basic-charts/#bar-(vertical)"
+    href="/data-visualization/basic-charts/#stacked-bar-(discrete)"
     >
 
 ![Stacked bar (vertical)](images/barstack.svg)
