grouped bar link fix

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -67,7 +67,7 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Grouped bar (horizontal)"
-    href="/data-visualization/basic-charts#grouped-bar"
+    href="/data-visualization/basic-charts#grouped-horizontal-bar-(discrete)"
     >
 
 ![Grouped bar (horizontal)](images/grouped-bar-horizontal.svg)
@@ -112,7 +112,7 @@ Start by identifying the purpose of the visualization and then choose the approp
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm >
  <OverviewCard
     title="Stream"
-	disabled
+    href="/data-visualization/basic-charts#donut"
     >
 
 ![Stream](images/stream.svg)
