removed design only tags

--- a/src/pages/data-visualization/chart-types/index.mdx
+++ b/src/pages/data-visualization/chart-types/index.mdx
@@ -169,7 +169,6 @@ Start by identifying the purpose of the visualization and then choose the approp
  <OverviewCard
     title="Stacked area"
     href="/data-visualization/basic-charts/#stacked-area-chart"
-    tag="Design only"
     >
 
 ![Stacked area](images/areastack.svg)
@@ -183,15 +182,14 @@ Start by identifying the purpose of the visualization and then choose the approp
    tag="Design only"
    >
 
-![Meter / gauge](images/gauge.svg)
+![Gauge](images/gauge.svg)
 
 </OverviewCard>
 </Column>
 <Column  colMax={3} colXl={3} colLg={4} colMd={4} colSm={2} noGutterSm>
  <OverviewCard
     title="Tree map"
-    href="/data-visualization/advanced-charts#tree-maps"
-    tag="Design only"
+    href="/data-visualization/basic-charts#gauge"
     >
 
 ![Tree map](images/treemap.svg)
